# Research-Prompt-Engineering

./: .gitignore  README.md
version13.0/: README.md  README_QUICKSTART.md  pyproject.toml  run_v13_fixture.bat  setup_windows.ps1
version13.0/docs/: AGENT_AUTOMATION_GUIDE.md  API_KEY_AND_SETUP_GUIDE.md  EXPERT_100_STEP_CLI_MVP_CHECKLIST.md  IMPLEMENTATION_PLAN.md  MEMBER_WORKFLOW.md
version13.0/examples/: defense_company_request.yaml  watchlist.yaml
version13.0/prompts/: 05_OPTIONAL_FREE_LLM_PROMPTS.md
version13.0/qa/: 04_QA_LINT_RULES.md
version13.0/schemas/: 03_V13_RUN_AND_ARTIFACT_SCHEMA.yaml
version13.0/specs/: 00_GIC_v13_LOCAL_AUTOMATION_MASTER_SPEC.md  01_OPENDART_DATA_CONTRACT.md  02_HTML_RENDERING_AND_QA_CONTRACT.md
version13.0/src/gic_v13/: cli.py  domain.py  pipeline.py
version13.0/src/gic_v13/agent/: __init__.py  batch.py  mailer.py
version13.0/tests/: test_agent.py  test_cli_run.py  test_corp_codes.py  test_drivers_report_qa.py  test_normalization_and_calculations.py  test_opendart_client.py
version13.0/tests/fixtures/: request.yaml
version14.0/: .gitignore  README.md  pyproject.toml  시작하기.md
version14.0/docs/: DESIGN_v14.md
version14.0/input/: company_request.yaml
version14.0/output/: 샘플_삼성전자_리포트.html  샘플_삼성전자_표지.html
version14.0/research/: 20260602_지표연구.html  과제_진행기록.html
version14.0/src/gic_v14/: cli.py  config.py  pipeline.py  view.py
version14.0/templates/: report.html.j2
version14.0/tests/: test_pipeline.py
version14.0/tests/fixtures/: market_samsung.json
version14.0/작업현황/: 20260602_작업현황.html
(+165 files in other folders)
